# inki

./: .gitignore  LICENSE  README.md
firmware/: CREDITS.md  LICENSE  README.md
firmware/c/: CMakeLists.txt  ImageResources.c  ImageResources.h  base64.c  base64.h  bootloader.c  build.sh  config.h  crc32sum  crc32sum.c  debug.c  debug.h  default_config.c  device_config.h  flash.c  flash.h  flash.sh  header_slot0_template.c.in  header_slot1_template.c.in  inki_bootloader.ld  inki_default_config.ld  inki_flash_slot0.ld  inki_flash_slot1.ld  lwipopts.h  main.c  main.h  reset.sh  rooms.c  rooms.h  seatsurfing_api.h.template  seatsurfing_config.h  tag_ota_firwmare.sh  version_template.c.in  version_template.h.in  webserver.c  webserver.h  webserver_flash.c  webserver_flash.h  webserver_pages.c  webserver_pages.h  (+6 more)
hardware/: LICENSE
hardware/circuit/: README.md  esign.kicad_pcb  esign.kicad_prl  esign.kicad_pro  esign.kicad_sch
hardware/enclosure/: README.md  case_4_2-Bezel.stl  case_4_2.stl
hardware/enclosure/Case_frame_waveshare_4_2_epaper/: case_4_2.FCStd  case_4_2.stl  wallmount.stl
hardware/enclosure/Case_frame_waveshare_7_5_epaper/: esign_7_5-Bezel.stl  esign_7_5-Case.stl  esign_7_5-wall_mount.stl  esign_7_5.FCStd  esign_7_5_lockplate-lockplate1.stl  esign_7_5_lockplate-lockplate2.stl  esign_7_5_lockplate.FCStd
